Added option to select ship